--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "ACCOUNTVIEW_LOGOUT_BUTTON" = "注销";
 
 /* No comment provided by engineer. */
-"ACCOUNTVIEW_NAV_TITLE" = "账户";
+"SETTINGSVIEW_NAV_TITLE" = "设置";
 
 /* No comment provided by engineer. */
 "ACCOUNTVIEW_PRIVACY_CELL" = "隐私政策";
@@ -455,3 +455,48 @@
 "DETAILVIEW_NO_SUCH_POST_PLACEHOLDER" = "树洞不存在";
 
 "DETAIL_MENU_REFRESH_LABEL" = "刷新";
+
+/* No comment provided by engineer. */
+"SETTINGS_CUSTOM_COLOR_SCHEME_DARK" = "深色";
+
+/* No comment provided by engineer. */
+"SETTINGS_CUSTOM_COLOR_SCHEME_LIGHT" = "浅色";
+
+/* No comment provided by engineer. */
+"SETTINGS_CUSTOM_COLOR_SCHEME_SYSTEM" = "自动";
+
+/* No comment provided by engineer. */
+"SETTINGSVIEW_APPEARANCE_NAV_TITLE" = "外观";
+
+/* No comment provided by engineer. */
+"SETTINGSVIEW_NAV_TITLE" = "设置";
+
+"APPINFO_VERSION_PREFIX" = " 版本";
+
+"SETTINGSVIEW_CONTENT_NAV_TITLE" = "内容";
+
+"SETTINGSVIEW_CONTENT_FOLD_SECTION_FOOTER" = "刷新界面以应用更改。";
+
+"SETTINGSVIEW_CONTENT_FOLD_CELL" = "折叠预设标签";
+
+"SETTINGSVIEW_CONTENT_CUSTOM_FOLD_SECTION_HEADER" = "自定义折叠标签";
+
+"SETTINGSVIEW_CONTENT_CUSTOM_FOLD_SECTION_ADD_MORE_BUTTON" = "添加";
+
+"SETTINGSVIEW_CONTENT_CUSTOM_FOLD_INVALID_ALERT_TITLE" = "标签不能为空或与已存在的标签相同";
+
+"SETTINGSVIEW_CONTENT_CUSTOM_FOLD_TEXTFIELD_PLACEHOLDER" = "输入自定义折叠标签";
+
+"ACCOUNTINFOVIEW_CHANGE_PASSWORD_CELL_LABEL" = "更改密码";
+
+"CHANGEPASSWORDVIEW_ENTER_EMAIL_PLACEHOLDER" = "邮箱";
+
+"CHANGEPASSWORDVIEW_ENTER_ORI_PASSWORD_PLACEHOLDER" = "原密码";
+
+"CHANGEPASSWORDVIEW_ENTER_NEW_PASSWORD_PLACEHOLDER" = "新密码";
+
+"CHANGEPASSWORDVIEW_CONFIRM_PASSWORD_PLACEHOLDER" = "确认密码";
+
+"CHANGEPASSWORDVIEW_SUBMMIT_BUTTON" = "提交";
+
+"CHANGE_PASSWORD_SUCCESS_ALERT_TITLE" = "成功更改密码，请重新登录。";
