Implement AboutView; update HollowDetailView

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -499,3 +499,37 @@
 "CHANGEPASSWORDVIEW_SUBMMIT_BUTTON" = "Submmit";
 
 "CHANGE_PASSWORD_SUCCESS_ALERT_TITLE" = "Successfully changed the password. Please login again.";
+
+"CITECONTENTVIEW_LOADING_POST_LABEL" = "Loading";
+
+"ACCOUNTVIEW_LOGOUT_ALERT_TITLE" = "Are you sure to log out?";
+
+"SEARCHVIEW_PICKER_CONFIRM_BUTTON" = "Confirm";
+
+"SETTINGSVIEW_OTHER_CLEAR_CACHE_BUTTON" = "Clear Cache";
+
+"SETTINGSVIEW_OTHER_CLEARING_LABEL" = "Clearing";
+
+"SETTINGSVIEW_OTHER_CACHE_CALCULATING_LABEL" = "Calculating";
+
+"SETTINGSVIEW_OTHER_CACHE_SECTION_HEADER" = "Cache";
+
+"SETTINGSVIEW_OTHER_NAV_TITLE" = "Other";
+
+"ABOUTVIEW_LICENSE_NAV_TITLE" = "License";
+
+"ABOUTVIEW_CONTRIBUTORS_FOOTER_TITLE" = "Contributors";
+
+"ABOUTVIEW_VERSION" = "VERSION";
+
+"ABOUTVIEW_BUILD_VERSION" = "BUILD VERSION";
+
+"ABOUTVIEW_GITHUB" = "Github";
+
+"TIMELINEVIEW_ANNOUCEMENT_CARD_TITLE" = "Announcement";
+
+"ABOUTVIEW_COPYRIGHT_NOTICE" = "Copyright © 2021 treehollow.";
+
+"ABOUTVIEW_OPENSOURCE_NOTICE" = "The source code of this app is open-sourced on GitHub under AGPL-3.0 License.";
+
+"ABOUTVIEW_OPENSOURCE_NOTICE_LICENSE" = "AGPL-3.0 License";
