--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -500,3 +500,37 @@
 "CHANGEPASSWORDVIEW_SUBMMIT_BUTTON" = "提交";
 
 "CHANGE_PASSWORD_SUCCESS_ALERT_TITLE" = "成功更改密码，请重新登录。";
+
+"CITECONTENTVIEW_LOADING_POST_LABEL" = "加载中";
+
+"ACCOUNTVIEW_LOGOUT_ALERT_TITLE" = "确定要注销？";
+
+"SEARCHVIEW_PICKER_CONFIRM_BUTTON" = "确认";
+
+"SETTINGSVIEW_OTHER_CLEAR_CACHE_BUTTON" = "清除缓存";
+
+"SETTINGSVIEW_OTHER_CLEARING_LABEL" = "正在清除";
+
+"SETTINGSVIEW_OTHER_CACHE_CALCULATING_LABEL" = "计算中";
+
+"SETTINGSVIEW_OTHER_CACHE_SECTION_HEADER" = "缓存";
+
+"SETTINGSVIEW_OTHER_NAV_TITLE" = "更多";
+
+"ABOUTVIEW_LICENSE_NAV_TITLE" = "开源许可";
+
+"ABOUTVIEW_CONTRIBUTORS_FOOTER_TITLE" = "贡献者";
+
+"ABOUTVIEW_VERSION" = "版本";
+
+"ABOUTVIEW_BUILD_VERSION" = "构建版本";
+
+"ABOUTVIEW_GITHUB" = "Github";
+
+"TIMELINEVIEW_ANNOUCEMENT_CARD_TITLE" = "公告";
+
+"ABOUTVIEW_COPYRIGHT_NOTICE" = "版权所有 © 2021 treehollow";
+
+"ABOUTVIEW_OPENSOURCE_NOTICE" = "本应用基于AGPL-3.0协议在GitHub开源。";
+
+"ABOUTVIEW_OPENSOURCE_NOTICE_LICENSE" = "AGPL-3.0协议";
