Implementation for notification configuration; cache bug fixes

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -533,3 +533,23 @@
 "ABOUTVIEW_OPENSOURCE_NOTICE" = "The source code of this app is open-sourced on GitHub under AGPL-3.0 License.";
 
 "ABOUTVIEW_OPENSOURCE_NOTICE_LICENSE" = "AGPL-3.0 License";
+
+"TIMELINEVIEW_ANNOUNCEMENT_HIDE_BUTTON" = "Hide";
+
+"SETTINGSVIEW_NOTIFICATION_EDIT_CANCEL" = "Cancel";
+
+"SETTINGSVIEW_NOTIFICATION_SET_BUTTON" = "Done";
+
+"SETTINGSVIEW_NOTIFICATION_EDIT_BUTTON" = "Edit";
+
+"PUSH_NOTIFICATION_TYPE_FAVOURITE" = "Favourites";
+
+"PUSH_NOTIFICATION_TYPE_REPLY_ME" = "Replies";
+
+"PUSH_NOTIFICATION_TYPE_SYSTEM_MSG" = "System Messages";
+
+"SETTINGSVIEW_NOTIFICATION_NO_ACCESS_LABEL" = "No Notification Access";
+
+"SETTINGSVIEW_NOTIFICATION_NO_ACCESS_DESCRIPTION" = "Go to Settings - Notification and turn on notification access for the app.";
+
+"SETTINGSVIEW_NOTIFICATION_NAV_TITLE" = "Notifications";
