--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -228,7 +228,7 @@
 "MESSAGEVIEW_PICKER_ATTENTION" = "关注";
 
 /* No comment provided by engineer. */
-"MESSAGEVIEW_PICKER_MESSAGE" = "系统信息";
+"MESSAGEVIEW_PICKER_MESSAGE" = "系统消息";
 
 /* No comment provided by engineer. */
 "REPORT_MENU_ADMIN_DELETE_BAN" = "删除并禁言";
@@ -534,3 +534,23 @@
 "ABOUTVIEW_OPENSOURCE_NOTICE" = "本应用基于AGPL-3.0协议在GitHub开源。";
 
 "ABOUTVIEW_OPENSOURCE_NOTICE_LICENSE" = "AGPL-3.0协议";
+
+"TIMELINEVIEW_ANNOUNCEMENT_HIDE_BUTTON" = "隐藏";
+
+"SETTINGSVIEW_NOTIFICATION_EDIT_CANCEL" = "取消";
+
+"SETTINGSVIEW_NOTIFICATION_SET_BUTTON" = "完成";
+
+"SETTINGSVIEW_NOTIFICATION_EDIT_BUTTON" = "编辑";
+
+"PUSH_NOTIFICATION_TYPE_FAVOURITE" = "收藏的树洞";
+
+"PUSH_NOTIFICATION_TYPE_REPLY_ME" = "评论和回复";
+
+"PUSH_NOTIFICATION_TYPE_SYSTEM_MSG" = "系统消息";
+
+"SETTINGSVIEW_NOTIFICATION_NO_ACCESS_LABEL" = "未授予通知权限";
+
+"SETTINGSVIEW_NOTIFICATION_NO_ACCESS_DESCRIPTION" = "前往设置 - 通知并打开应用的通知权限。";
+
+"SETTINGSVIEW_NOTIFICATION_NAV_TITLE" = "通知";
