Fix cache bug; allow changing color set

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -520,9 +520,9 @@
 
 "ABOUTVIEW_CONTRIBUTORS_FOOTER_TITLE" = "Contributors";
 
-"ABOUTVIEW_VERSION" = "VERSION";
+"ABOUTVIEW_VERSION" = "Version";
 
-"ABOUTVIEW_BUILD_VERSION" = "BUILD VERSION";
+"ABOUTVIEW_BUILD_VERSION" = "Build Version";
 
 "ABOUTVIEW_GITHUB" = "Github";
 
@@ -553,3 +553,11 @@
 "SETTINGSVIEW_NOTIFICATION_NO_ACCESS_DESCRIPTION" = "Go to Settings - Notification and turn on notification access for the app.";
 
 "SETTINGSVIEW_NOTIFICATION_NAV_TITLE" = "Notifications";
+
+"SETTINGSVIEW_APPEARENCE_THEMES_SECTION_FOOTER" = "The changes will apply when restarting the app.";
+
+"SETTINGSVIEW_APPEARENCE_THEMES_SECTION_HEADER" = "Themes";
+
+"SETTINGSVIEW_APPEARENCE_THEMES_DEFAULT_CELL" = "Default";
+
+"SETTINGSVIEW_APPEARENCE_COLOR_SCHEME" = "Color Scheme";
