--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -554,3 +554,11 @@
 "SETTINGSVIEW_NOTIFICATION_NO_ACCESS_DESCRIPTION" = "前往设置 - 通知并打开应用的通知权限。";
 
 "SETTINGSVIEW_NOTIFICATION_NAV_TITLE" = "通知";
+
+"SETTINGSVIEW_APPEARENCE_THEMES_SECTION_FOOTER" = "将在下一次启动时应用更改。";
+
+"SETTINGSVIEW_APPEARENCE_THEMES_SECTION_HEADER" = "主题";
+
+"SETTINGSVIEW_APPEARENCE_THEMES_DEFAULT_CELL" = "默认";
+
+"SETTINGSVIEW_APPEARENCE_COLOR_SCHEME" = "显示模式";
