--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -561,3 +561,15 @@
 "SETTINGSVIEW_APPEARENCE_THEMES_DEFAULT_CELL" = "Default";
 
 "SETTINGSVIEW_APPEARENCE_COLOR_SCHEME" = "Color Scheme";
+
+"LOGINVIEW_REGISTER_TOS_FOOTER_PREFIX" = "By creating an account, you agree to:";
+
+"LOGINVIEW_REGISTER_TOS_BUTTON" = "Terms of Service";
+
+"LOGINVIEW_REGISTER_PRIVACY_BUTTON" = "Policy of Privacy";
+
+"OPENURL_METHOD_IN_APP" = "In App";
+
+"OPENURL_METHOD_UNIVERSAL" = "Universal";
+
+"SETTINGSVIEW_OTHER_OPEN_URL_SECTION_TITLE" = "Open Links";
