--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -562,3 +562,15 @@
 "SETTINGSVIEW_APPEARENCE_THEMES_DEFAULT_CELL" = "默认";
 
 "SETTINGSVIEW_APPEARENCE_COLOR_SCHEME" = "显示模式";
+
+"LOGINVIEW_REGISTER_TOS_FOOTER_PREFIX" = "点击“注册”，意味着你同意以下协议：";
+
+"LOGINVIEW_REGISTER_TOS_BUTTON" = "服务协议";
+
+"LOGINVIEW_REGISTER_PRIVACY_BUTTON" = "隐私政策";
+
+"OPENURL_METHOD_IN_APP" = "应用内打开";
+
+"OPENURL_METHOD_UNIVERSAL" = "用浏览器打开";
+
+"SETTINGSVIEW_OTHER_OPEN_URL_SECTION_TITLE" = "打开链接";
