Update dynamic font; show message view when tapping on notification; adapt small size phones; improve performance

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -566,7 +566,7 @@
 
 "LOGINVIEW_REGISTER_TOS_BUTTON" = "Terms of Service";
 
-"LOGINVIEW_REGISTER_PRIVACY_BUTTON" = "Policy of Privacy";
+"LOGINVIEW_REGISTER_PRIVACY_BUTTON" = "Privacy Policy";
 
 "OPENURL_METHOD_IN_APP" = "In App";
 
