--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -563,9 +563,9 @@
 
 "SETTINGSVIEW_APPEARENCE_COLOR_SCHEME" = "显示模式";
 
-"LOGINVIEW_REGISTER_TOS_FOOTER_PREFIX" = "点击“注册”，意味着你同意以下协议：";
+"LOGINVIEW_REGISTER_TOS_FOOTER_PREFIX" = "点击“注册”，即代表你同意以下协议：";
 
-"LOGINVIEW_REGISTER_TOS_BUTTON" = "服务协议";
+"LOGINVIEW_REGISTER_TOS_BUTTON" = "服务条款";
 
 "LOGINVIEW_REGISTER_PRIVACY_BUTTON" = "隐私政策";
 
@@ -574,3 +574,9 @@
 "OPENURL_METHOD_UNIVERSAL" = "用浏览器打开";
 
 "SETTINGSVIEW_OTHER_OPEN_URL_SECTION_TITLE" = "打开链接";
+
+"SETTINGSVIEW_PROVIDER_SECTION_TITLE" = "树洞信息";
+
+"PROVIDER_VIEW_RESTORE_ANNOUNCEMENT" = "在时间轴中显示";
+
+"PROVIDER_VIEW_CONTACT" = "联系我们";
