Support jump to replying comment

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -579,3 +579,5 @@
 "PROVIDER_VIEW_RESTORE_ANNOUNCEMENT" = "Show on Timeline";
 
 "PROVIDER_VIEW_CONTACT" = "Contact Us";
+
+"COMMENT_VIEW_JUMP_LABEL" = "Jump to Replying Commment";
