--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -580,3 +580,5 @@
 "PROVIDER_VIEW_RESTORE_ANNOUNCEMENT" = "在时间轴中显示";
 
 "PROVIDER_VIEW_CONTACT" = "联系我们";
+
+"COMMENT_VIEW_JUMP_LABEL" = "跳转到回复的评论";
