--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -582,3 +582,7 @@
 "PROVIDER_VIEW_CONTACT" = "联系我们";
 
 "COMMENT_VIEW_JUMP_LABEL" = "跳转到回复的评论";
+
+"WELCOMEVIEW_USING_IDENTICAL_CONFIG_ALERT_TITLE_PREFIX" = "正在使用 ";
+
+"WELCOMEVIEW_USING_IDENTICAL_CONFIG_ALERT_TITLE_SUFFIX" = " 的配置。请在“选择树洞”界面选择相应的入口。";
