--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -585,3 +585,17 @@
 "WELCOMEVIEW_USING_IDENTICAL_CONFIG_ALERT_TITLE_PREFIX" = "You are using configuration for ";
 
 "WELCOMEVIEW_USING_IDENTICAL_CONFIG_ALERT_TITLE_SUFFIX" = ". Please choose the corresponding entry in 'Select Hollow'.";
+
+"SETTINGSVIEW_PROVIDER_SECTION_TITLE_COMPACT" = "Hollow";
+
+"IPAD_SIDEBAR_CONTENT_SECTION_TITLE" = "CONTENT";
+
+"IPAD_SIDEBAR_SEARCH" = "Search";
+
+"IPAD_SIDEBAR_TRENDING" = "Trending";
+
+"IPAD_SIDEBAR_FAVOURITES" = "Favourites";
+
+"IPAD_SIDEBAR_MESSAGES" = "MESSAGES";
+
+"IPAD_SIDEBAR_INFO_SECTION_TITLE" = "INFO AND SETTINGS";
