--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -586,3 +586,17 @@
 "WELCOMEVIEW_USING_IDENTICAL_CONFIG_ALERT_TITLE_PREFIX" = "正在使用 ";
 
 "WELCOMEVIEW_USING_IDENTICAL_CONFIG_ALERT_TITLE_SUFFIX" = " 的配置。请在“选择树洞”界面选择相应的入口。";
+
+"SETTINGSVIEW_PROVIDER_SECTION_TITLE_COMPACT" = "树洞";
+
+"IPAD_SIDEBAR_CONTENT_SECTION_TITLE" = "内容";
+
+"IPAD_SIDEBAR_SEARCH" = "搜索";
+
+"IPAD_SIDEBAR_TRENDING" = "热榜";
+
+"IPAD_SIDEBAR_FAVOURITES" = "收藏";
+
+"IPAD_SIDEBAR_MESSAGES" = "消息";
+
+"IPAD_SIDEBAR_INFO_SECTION_TITLE" = "信息";
