--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -599,3 +599,5 @@
 "IPAD_SIDEBAR_MESSAGES" = "MESSAGES";
 
 "IPAD_SIDEBAR_INFO_SECTION_TITLE" = "INFO AND SETTINGS";
+
+"DETAIL_MENU_QUOTE_LABEL" = "Quote in New Post";
