Implement search interference; support adding images with drag and drop

--- a/Source/Hollow/en.lproj/Localizable.strings
+++ b/Source/Hollow/en.lproj/Localizable.strings
@@ -601,3 +601,5 @@
 "IPAD_SIDEBAR_INFO_SECTION_TITLE" = "INFO AND SETTINGS";
 
 "DETAIL_MENU_QUOTE_LABEL" = "Quote in New Post";
+
+"SEARCHVIEW_SEARCH_INTERFERENCE_CONTINUE_SEARCH" = "Continue Search";
