--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -602,3 +602,5 @@
 "IPAD_SIDEBAR_INFO_SECTION_TITLE" = "信息";
 
 "DETAIL_MENU_QUOTE_LABEL" = "引用此树洞";
+
+"SEARCHVIEW_SEARCH_INTERFERENCE_CONTINUE_SEARCH" = "继续搜索";
