--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -610,3 +610,7 @@
 "DETAIL_MENU_QUOTE_LABEL" = "引用此树洞";
 
 "SEARCHVIEW_SEARCH_INTERFERENCE_CONTINUE_SEARCH" = "继续搜索";
+
+"IMAGE_COMPRESSOR_IMAGE_TOO_LARGE" = "无法压缩";
+
+"IMAGE_COMPRESSOR_IMAGE_TOO_LARGE_DESCRIPTION" = "图片尺寸过大，无法压缩。请选择其他图片。";
