--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -614,3 +614,5 @@
 "IMAGE_COMPRESSOR_IMAGE_TOO_LARGE" = "无法压缩";
 
 "IMAGE_COMPRESSOR_IMAGE_TOO_LARGE_DESCRIPTION" = "图片尺寸过大，无法压缩。请选择其他图片。";
+
+"IMAGEVIEW_SAVE_IMAGE_FAIL_ALERT_NOTE" = "\n请检查权限设置。";
