--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -616,3 +616,9 @@
 "IMAGE_COMPRESSOR_IMAGE_TOO_LARGE_DESCRIPTION" = "图片尺寸过大，无法压缩。请选择其他图片。";
 
 "IMAGEVIEW_SAVE_IMAGE_FAIL_ALERT_NOTE" = "\n请检查权限设置";
+
+"SETTINGSVIEW_OTHER_PERFORMANCE_SECTION_HEADER" = "性能";
+
+"SETTINGSVIEW_OTHER_PERFORMANCE_SECTION_FOOTER" = "启用高效模式可能会降低渲染质量。";
+
+"SETTINGSVIEW_OTHER_EFFICIENT_MODE_ENABLE" = "高效模式";
