--- a/Source/Hollow/zh-Hans.lproj/Localizable.strings
+++ b/Source/Hollow/zh-Hans.lproj/Localizable.strings
@@ -619,8 +619,20 @@
 
 "IMAGEVIEW_SAVE_IMAGE_FAIL_ALERT_NOTE" = "\n请检查权限设置";
 
-"SETTINGSVIEW_OTHER_PERFORMANCE_SECTION_HEADER" = "性能";
+"SETTINGSVIEW_OTHER_EXP_FEAT_NAV_TITLE" = "实验性功能";
 
-"SETTINGSVIEW_OTHER_PERFORMANCE_SECTION_FOOTER" = "启用高效模式可能会降低渲染质量。";
+"SETTINGSVIEW_OTHER_EXP_FEAT_DESCRIPTION" = "下面是一些未经充分测试的实验性功能。若出现问题，请发送反馈。";
 
-"SETTINGSVIEW_OTHER_EFFICIENT_MODE_ENABLE" = "高效模式";
+"SETTINGSVIEW_OTHER_EXP_REDUCE_IMG_QUALITY_HEADER" = "图像渲染";
+
+"SETTINGSVIEW_OTHER_EXP_REDUCE_IMG_QUALITY_FOOTER" = "降低图片预览的渲染质量。图片查看不受影响。";
+
+"SETTINGSVIEW_OTHER_EXP_REDUCE_IMG_QUALITY_LABEL" = "降低图片渲染质量";
+
+"SETTINGSVIEW_OTHER_EXP_AVATAR_HEADER" = "头像";
+
+"SETTINGSVIEW_OTHER_EXP_AVATAR_FOOTER" = "头像渲染在一些设备上存在问题，若当前使用遇到卡顿等问题，可以尝试打开这些选项。在某些设备上启用Off-Screen Render可能反而会降低刷新率。";
+
+"SETTINGSVIEW_OTHER_EXP_AVATAR_OFFSCREEN_LABEL" = "启用Off-Screen Render";
+
+"SETTINGSVIEW_OTHER_EXP_AVATAR_SIMPLE_LABEL" = "使用简易头像";
